--- a/assets/ref.bib
+++ b/assets/ref.bib
@@ -1,54 +1,17 @@
-@incollection{example_invited_talk,
-  author = {J. Doe},
-  note = {Example Location},
-  publisher = {Example Talk Name},
-  year = {2040},
-  keywords = "invited",
+@confarticle{10.1145/3634848.3634857,
+author = {Mahmoud, Amgad Abdallah and Alyan, Nada Adel and Elkerdawy, Ahmed and Tanabe, Shihori and Frederic, Andres and Pester, Andreas and Ali, Hesham},
+title = {A New Graph-Based Reinforcement Learning Environment for Targeted Molecular Generation and Optimization},
+year = {2024},
+isbn = {9798400708107},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3634848.3634857},
+doi = {10.1145/3634848.3634857},
+abstract = {Generating a new molecule that satisfies certain desirable objectives or optimizing an existing molecule to meet additional requirements continues to play a crucial part in the important area of computer-aided drug design. Many research studies have been conducted to improve this process in order to reduce time and all costs associated with proposing a new drug to markets. Moreover, any progress in generating or optimizing useful molecules would help reduce the risk of clinical trials and prevent potential side effects including possible severe consequences. In this paper, we propose MolGraphEnv, a new multi-objective molecular generation and optimization environment that models the process of generating and/or optimizing molecules as a Markov Decision Process (MDP) and provides a smooth integration with graph machine learning framework PyTorch Geometric (PYG) and RDKit&nbsp;[2, 7, 15]. In the proposed environment, molecules are modeled using graphs where atoms are represented by nodes and bonds are represented by edges. The observations are stored as a PYG Data object that accounts for the computed features for each node (atom) and each edge (bond). Some of these features are obtained from the chemical domain, such as Hybridization and atomic numbers, while other features are obtained from pure graph theory such as node degrees. By integrating such features from both the chemistry and the graphs’ domain, we ensure a better representation of the atoms and their interrelationships. The action space is multi-discrete and inherited from the gymnasium for better functionality. We show that the proposed environment provides a smooth and flexible experience for the end user by designing a reward system to intelligently bias the searching process toward desired properties, such as obtaining molecules with higher QED (Quantitative Estimate of Drug-likeness) and ensuring chemical and structural validity. MolGraphEnv represents a significant step forward in computer-aided drug design, providing a powerful platform for generating and optimizing molecules with specific objectives. It is a seamless integration with established graph machine-learning tools and cheminformatics frameworks makes it a valuable resource for researchers in the field.},
+booktitle = {Proceedings of the 2023 12th International Conference on Software and Information Engineering},
+pages = {52–57},
+numpages = {6},
+keywords = {artificial intelligence, deep reinforcement learning, drug design, graph neural networks},
+location = {<conf-loc>, <city>Sharm El-Sheikh</city>, <country>Egypt</country>, </conf-loc>},
+series = {ICSIE '23}
 }
-
-@software{example_software,
-  author = {J. Doe},
-  title = {Example software},
-  url = {https://example.com},
-  date = {2040},
-}
-
-@inproceedings{example_proceeding,
-    Author = {J. Doe},
-    Year = {2040},
-    Title = {Example title},
-    Booktitle = {Example Book},
-    Address = {Pasadena, CA},
-    file = {example_proceeding.pdf},
-    abstract = {Example abstract.},
-}
-
-@incollection{example_conference,
-    author = {J. Doe},
-    title = {Example talk},
-    note = {Example Conference},
-    year = {2040},
-}
-
-@unpublished{feynman06,
-    Author = {R. P. Feynman and J. M. Cline},
-    Title = {Feynman lectures on the strong interations},
-    Note = {arXiv:2006.08594},
-    doi = {2006.08594},
-    file = {feynman06.pdf},
-    abstract = {These twenty-two lectures, with exercises, comprise the extent of what was meant to be a full-year graduate-level course on the strong interactions and QCD, given at Caltech in 1987-88. The course was cut short by the illness that led to Feynman's death. Several of the lectures were finalized in collaboration with Feynman for an anticipated monograph based on the course. The others, while retaining Feynman's idiosyncrasies, are revised similarly to those he was able to check. His distinctive approach and manner of presentation are manifest throughout. Near the end he suggests a novel, nonperturbative formulation of quantum field theory in D dimensions. Supplementary material is provided in appendices and ancillary files, including verbatim transcriptions of three lectures and the corresponding audiotaped recordings.},
-}
-
-@article{feynman1939forces,
-  title={Forces in molecules},
-  author={R. P. Feynman},
-  journal={Physical Review},
-  volume={56},
-  number={4},
-  pages={340},
-  year={1939},
-  doi={10.1103/PhysRev.56.340},
-  file={feynman39.pdf},
-  abstract={Formulas have been developed to calculate the forces in a molecular system directly, rather than indirectly through the agency of energy. This permits an independent calculation of the slope of the curves of energy vs. position of the nuclei, and may thus increase the accuracy, or decrease the labor involved in the calculation of these curves. The force on a nucleus in an atomic system is shown to be just the classical electrostatic force that would be exerted on this nucleus by other nuclei and by the electrons' charge distribution. Qualitative implications of this are discussed.},
-}
-
